update search filter