@@ -1,14 +1,18 @@
 package com.job_web.security;
 
 import java.io.IOException;
+import java.util.Arrays;
 import java.util.List;
-import java.util.Set;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 import javax.servlet.FilterChain;
 import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
+import io.jsonwebtoken.ExpiredJwtException;
+import io.jsonwebtoken.JwtException;
 import org.springframework.http.HttpHeaders;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -17,6 +21,7 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.util.AntPathMatcher;
+import org.springframework.util.PathMatcher;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import com.job_web.service.JwtService;
@@ -29,46 +34,61 @@ import lombok.RequiredArgsConstructor;
 public class JwtFilter extends OncePerRequestFilter {
 	private final JwtService jwtService;
 	private final UserDetailsService userDetailsService;
-	private final AntPathMatcher pathMatcher = new AntPathMatcher();
-	private final List<String> allowedURL = List.of("/api/account/login"
-			, "/api/account/register"
+	private final List<String> allowedOrigins = Arrays.asList(
+			"/api/account/.*"
 			,"/error"
 			,"/api/home/init"
-			,"/api/job/detail/**"
+			,"/api/job/pub/.*"
+			,"/api/blog/pub/.*"
+			,"/auth/.*"
+			,"/oauth2/.*"
 	);
 	@Override
 	protected void doFilterInternal(@NonNull HttpServletRequest request, @NonNull HttpServletResponse response,
 			@NonNull FilterChain filterChain) throws ServletException, IOException {
-
-		if(allowURLDefault(request)) {
-			filterChain.doFilter(request, response);
-			return;
+		// TODO Auto-generated method stub
+		String url = request.getServletPath();
+		for (String allowedOrigin : allowedOrigins) {
+			if (Pattern.compile(allowedOrigin).matcher(url).matches()) {
+				filterChain.doFilter(request, response);
+				return;
+			}
 		}
 		String authHeader = request.getHeader(HttpHeaders.AUTHORIZATION);
 		String jwt;
 		String userEmail;
 		if (authHeader == null || authHeader.trim().isEmpty() || !authHeader.startsWith("Bearer ")) {
-			response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "missing token");
+			filterChain.doFilter(request, response);
 			return;
 		}
 		jwt = authHeader.substring(7);
-		userEmail = jwtService.extractUsername(jwt);
-		if (userEmail != null && SecurityContextHolder.getContext().getAuthentication() == null) {
-			UserDetails userDetails = userDetailsService.loadUserByUsername(userEmail);
-			if (jwtService.isTokenValid(jwt, userDetails)) {
-				UsernamePasswordAuthenticationToken usernamePasswordAuthenticationToken = new UsernamePasswordAuthenticationToken(
-						userDetails, null, userDetails.getAuthorities());
-				usernamePasswordAuthenticationToken
-						.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
-				SecurityContextHolder.getContext().setAuthentication(usernamePasswordAuthenticationToken);
-			}else {
-				response.sendError(HttpServletResponse.SC_FORBIDDEN, "token invalid");
-				return;
+		try {
+			userEmail = jwtService.extractUsername(jwt);
+			if (userEmail != null && SecurityContextHolder.getContext().getAuthentication() == null) {
+				UserDetails userDetails = userDetailsService.loadUserByUsername(userEmail);
+				if (jwtService.isTokenValid(jwt, userDetails)) {
+					UsernamePasswordAuthenticationToken usernamePasswordAuthenticationToken = new UsernamePasswordAuthenticationToken(
+							userDetails, null, userDetails.getAuthorities());
+					usernamePasswordAuthenticationToken
+							.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
+					SecurityContextHolder.getContext().setAuthentication(usernamePasswordAuthenticationToken);
+				}
 			}
+		}catch (ExpiredJwtException e) {
+			response.setContentType("application/json");
+			response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+			response.getWriter().write("{\"message\":\"Expired JWT token\"}");
+			response.getWriter().flush();
+			response.setHeader("Connection", "close");
+			return;
+		} catch (JwtException e) {
+			response.setContentType("application/json");
+			response.setStatus(HttpServletResponse.SC_FORBIDDEN);
+			response.getWriter().write("{\"message\":\"Invalid JWT token\"}");
+			response.getWriter().flush();
+			response.setHeader("Connection", "close");
+			return;
 		}
 		filterChain.doFilter(request, response);
-	}
-	private boolean allowURLDefault(HttpServletRequest request) {
-		return allowedURL.stream().anyMatch(allowed -> pathMatcher.match(allowed, request.getServletPath()));
 	}
 }
